Home page and explore pages changed There is now only currently 2 pages to nagivate to on the website. one being the homepage which has some minor changes and an explore page where the user will be able to search the database (still to implement).

--- a/views/explore.jade
+++ b/views/explore.jade
@@ -14,5 +14,9 @@ block body
 			+nav_item("explore", "active") Explore
 				+icon-success("search")
 					a (href="explore")
-		h1= title
-		
+		h1 #{title}
+		p Explore the #{title} database.
+		//form(name="search-query", action="/explore", method="get")
+			+input("text", "query", "Search", "", name="query")
+			+submit("Search")
+		p #{place}
