Minor changes made to design

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,8 +15,8 @@ block body
 			+navbar(title, "dropdown_menu")
 				+nav_item("/", "active") Home
 					+icon-success("home")
-				+nav_item("browse") Browse
-					+icon-success("search")
+				+nav_item("browse?type=Broughton") Browse
+					+icon-success("book")
 				+nav_item("/search") Search
 					+icon-success("search")
 
@@ -36,3 +36,8 @@ block body
 					{image: "images/carousel2.jpg"},
 					{image: "images/carousel3.jpg"}
 				])
+
+		br
+
+		.container
+			+navbar("The William Colenso Project © 2016","dropdown_menu")
