--- a/views/search.jade
+++ b/views/search.jade
@@ -4,7 +4,7 @@ append styles
 	link(rel="stylesheet" href="stylesheets/custom.css")
 
 head
-title = title
+	title = title
 block body
 
 	<a href="/">
@@ -15,8 +15,8 @@ block body
 		+navbar(title, "dropdown_menu")
 			+nav_item("/") Home
 				+icon-success("home")
-			+nav_item("browse") Browse
-				+icon-success("search")
+			+nav_item("browse?type=Broughton") Browse
+				+icon-success("book")
 			+nav_item("/search", "active") Search
 				+icon-success("search")
 
@@ -25,8 +25,15 @@ block body
 	.container
 		h1 #{title}
 		p Explore the #{title} database.
+
 		form(name="query", action="/search", method="get")
-			+input("text", "query", "Search", "", name="searchString")
+			+input("text", "query", "Text Search | e.g. Colenso", "", name="searchString")
 			+submit("Search")
 
+		form(name="xquery", action="/xquery", method="get")
+			+input("text", "xquery", "Xquery Search | e.g. //name", "", name="searchString")
+			+submit("Search")
+
+		if(nResults > 0)
+			+alert-success(nResults + " results found")
 		!{results}
