Minor changes made

--- a/views/file.jade
+++ b/views/file.jade
@@ -4,7 +4,8 @@ append styles
     link(rel="stylesheet" href="stylesheets/custom.css")
 
 head
-title = title
+    title = title
+
 block body
 
     <a href="/">
@@ -15,10 +16,17 @@ block body
         +navbar(title, "dropdown_menu")
             +nav_item("/") Home
                 +icon-success("home")
-            +nav_item("browse", "active") Browse
+            +nav_item("browse?type=Broughton", "active") Browse
+                +icon-success("book")
+            +nav_item("search") Search
                 +icon-success("search")
-            +nav_item("/search") Search
-                +icon-success("search")
+
+    .container
+        +navbar("Browse", "dropdown_menu")
+            +nav_item("#", "active") Text
+                +icon-success("font")
+            +nav_item("#{url}") Raw xml
+                +icon-success("console")
 
     br
 
@@ -26,4 +34,9 @@ block body
         h1 #{title}
         p Explore the #{title} database.
 
+        form(method="post", action="/file/download").pull-right
+            input(type="hidden", name="docs", value=docs)
+            button(type="submit").btn.btn-success Download Results
+
+        h3 #{fileName}
         !{data}
