--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,3 +1,7 @@
+/*body {
+	background-color: #4d4d4c;
+}*/
+
 .container {
 	background-color: #e7e7e7;
 	padding-top: 1%;
@@ -10,7 +14,7 @@
 
 .mycarousel {
 	margin: 0 auto;
-	width: 60%;
+	width: 49%;
 }
 
 .panel-default {
