--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ block body
 					+icon-success("home")
 				+nav_item("browse?type=Broughton") Browse
 					+icon-success("book")
-				+nav_item("/search") Search
+				+nav_item("/xquery") Search
 					+icon-success("search")
 
 		br
