--- a/views/xquery.jade
+++ b/views/xquery.jade
@@ -17,23 +17,23 @@ block body
                 +icon-success("home")
             +nav_item("browse?type=Broughton") Browse
                 +icon-success("book")
-            +nav_item("/search", "active") Search
+            +nav_item("/xquery", "active") Search
                 +icon-success("search")
 
     br
 
     .container
         h1 #{title}
-        p Explore the #{title} database.
-        p Text Search
+        p Search the #{title} database.
+
         form(name="query", action="/search", method="get")
-            +input("text", "query", "e.g. Colenso", "", name="searchString")
+            +input("text", "query", "Text Search | e.g. Colenso", "", name="searchString")
             +submit("Search")
-        p Xquery Search
         form(name="xquery", action="/xquery", method="get")
-            +input("text", "xquery", "e.g. //name", "", name="searchString")
+            +input("text", "xquery", "Xquery Search | e.g. //name", "", name="searchString")
             +submit("Search")
 
         if(nResults > 0)
             +alert-success(nResults + " results found")
-        !{results}
+        each val in results
+            p: a(href = "/file?filename=/" + val) !{val}
