--- a/views/index.jade
+++ b/views/index.jade
@@ -39,5 +39,5 @@ block body
 
 		br
 
-		.container
-			+navbar("The William Colenso Project © 2016","dropdown_menu")
+		.containerFoot
+			p The William Colenso Project © 2016
